CSS/styles.css
:root {
    --clr-dark: rgb(34, 34, 34);
    --clr-charcoal: rgb(47, 47, 47);
    --clr-light: rgb(84, 84, 84);

    --clr-primary: #696969;
    --clr-secondary: #420420;
    /* Gosh I'm such a child */
    --clr-accent: #f69a31;
    --clr-dark-accent: #a7671d;
}

body {
    /* //color: */
    padding: 0;
    margin: 0;
    color: var(--clr-accent);
    background-color: var(--clr-charcoal);
    text-align: center;
    font-size: 4rem;
    overflow: hidden;
    font-family: sans-serif;
    font-weight: 100;
    transition: 100ms;

}

.wholeScreen {
    min-width: 100vw;
    min-height: 100vh;
    align-content: center;
}

h1,
p {
    padding: 0;
    margin: 0;
    line-height: 1;
    transition: 100ms;

}

a {
    text-decoration: none;
    color: var(--clr-dark-accent);
    transition: 50ms;
}

a:hover {
    transform: scale(1.1);
    color: var(--clr-accent);

}


.theinfo {
    position: relative;
    top: 35vh;
    align-self: center;
    text-align: center;
    transition: 500ms;
}

.subdued {
    padding-top: 1vh;
    color: var(--clr-light);
    font-size: small;
    transition: 100ms;
}

.tldr {
    padding-top: 1vh;
    color: var(--clr-light);
    padding: 0 15%;
    font-size: 1rem;
    transition: 100ms;
}

.socials {
    padding-top: 1vh;
    font-size: 1rem;
    color: var(--clr-dark-accent);
}

#footer {
    background-image: linear-gradient(to bottom, #ffb860, #ffb254, #ffac49, #fea63c, #fea02f, #f99927, #f3931e, #ee8c13, #e3840e, #d87c09, #ce7404, #c36c00);
    position: absolute;
    width: 100vw;
    bottom: 0;
    background-color: var(--clr-accent);
    color: var(--clr-dark);

    align-items: center;
}

#footer p {
    margin: 1vh auto;
    font-size: 1.2rem;

}


/* MEDIA QUERIES */
@media (max-width:150px) {

    /* I HOPE THIS DOESNT HAPPEN TOP ANYONE */
    body {
        background-color: var(--clr-dark);
        color: var(--clr-accent);

        min-width: 60px;
        min-height: 75px;
        padding: 0;
        margin: 0;
    }

    h1 {
        font-size: .3rem;
    }

    p {
        font-size: 0.01rem;
    }

    .subdued {
        /* // padding-top: .1vh; */

        font-size: .01rem;
    }


    .theinfo .tldr {
        margin: 0 auto;
    }
}



@media (max-height:100px) {
    .theinfo {
        margin: 0 auto;
    }
}

@media (max-width:250px) {

    /* I HOPE THIS DOESNT HAPPEN TOP ANYONE */
    body {
        background-color: var(--clr-dark);
        color: var(--clr-accent);
        font-size: 0.1rem;
        min-width: 60px;
        min-height: 75px;
        padding: 0;
        margin: 0;
    }

    h1 {
        font-size: .5rem;
    }

    p {
        font-size: 0.1rem;
    }

    .subdued {
        padding-top: .1vh;

        font-size: .1rem;
    }

    .tldr,
    .mfd {
        display: none;

    }

    .theinfo {
        top: 0;
    }

    #footer {
        display: none;

    }
}

@media (max-height:250px) {

    /* I HOPE THIS DOESNT HAPPEN TOP ANYONE */
    body {
        background-color: var(--clr-dark);
        color: var(--clr-accent);
        font-size: 0.1rem;
        min-width: 60px;
        min-height: 75px;
        padding: 0;
        margin: 0;
    }

    h1 {
        font-size: .3rem;
    }

    p {
        font-size: 0.1rem;
    }

    .tldr {
        display: none;
    }

    .subdued {
        padding-top: .1vh;

        font-size: 0.1rem;
    }

    .theinfo {
        top: 0;
    }

    #footer,
    .mfd {
        display: none;
    }

}

@media (max-width:420px) {
    #footer p {
        font-size: 0.01rem;
    }
}

@media (max-width:586px) {
    body {
        background-color: var(--clr-accent);
        color: var(--clr-dark);
        font-size: 0.1rem;
    }

    h1 {
        font-size: 1rem;
    }

    p {
        font-size: 0.5rem;
    }

    .tldr {
        font-size: 0.5rem;
    }

    .subdued {
        padding-top: 0.1vh;

        font-size: 0.3rem;
    }

    #footer p {
        font-size: 0.05rem;
    }

    #footer .del,
    .mfd {
        display: none;
    }


}

@media (max-height:500px) {
    body {
        background-color: var(--clr-accent);
        color: var(--clr-dark);
        font-size: 0.1rem;
    }

    h1 {
        font-size: 1rem;
    }

    p {
        font-size: 0.5rem;
    }

    .tldr {
        font-size: 0.5rem;
    }

    .subdued {
        padding-top: .1vh;

        font-size: .3rem;
    }




}


@media (max-width:720px) {
    body {
        background-color: var(--clr-accent);
        color: var(--clr-dark);
        font-size: 1.5rem;
    }

    #footer p {
        font-size: 1rem;
    }
}

@media (max-width:1200px) {
    body {
        background-color: var(--clr-accent);
        color: var(--clr-dark);
        font-size: 2rem;
    }
}

@media (prefers-color-scheme: dark) {
    body {
        background-color: var(--clr-dark);
        color: var(--clr-accent);
    }
}

